--- a/src/templates/altaPresupuestos.html
+++ b/src/templates/altaPresupuestos.html
@@ -287,7 +287,7 @@
                     <thead></thead>
                     <tbody>
                         <tr>
-                            <th scope="row" style="text-align: right;">NOMBRE PROYECTO:</th>
+                            <th scope="row">NOMBRE PROYECTO:</th>
                             <td>
                                 <div class="position-relative">
                                     <input type="text" class="form-control form-control-sm" id="PROYECTO" name="PROYECTO"  autocomplete="off" required>
