--- a/src/templates/pagos_sugeridos.html
+++ b/src/templates/pagos_sugeridos.html
@@ -118,7 +118,7 @@
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton{{ p.id_presupuesto }}">
                                 <li><a class="dropdown-item"
-                                        href="/edit_presupuesto/?id={{  p.id_presupuesto }}">CARGAR PAGOS</a></li>
+                                        href="/carga_pagos_sugeridos/?id={{  p.id_presupuesto }}">CARGAR PAGOS</a></li>
                                 <li>
                                     
                                 </li>
