--- a/src/templates/altaPagosSugeridos.html
+++ b/src/templates/altaPagosSugeridos.html
@@ -265,8 +265,51 @@
     </div>
 
     <br>
-
     <div class="card">
+        <div class="card-body">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
+                        <span><strong>PROYECTO: </strong> {{ presupuesto['proyecto']}}</span>
+                    </div>
+                    <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+                        <strong>CLIENTE: </strong><span> {{ presupuesto['cliente']}}</span> 
+                    </div>
+                    <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12" style="text-align: right;">
+                        <strong>PRESUPUESTO CLIENTE: </strong><span>{{ presupuesto['presupuesto_cliente']}}</span>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-end">
+                        <strong>FECHA INICIO: </strong><span>{{ presupuesto['fecha_inicio']}}</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+                        <strong>DIRECCIÓN DE OBRA: </strong><span>{{ presupuesto['direcion_obra']}}</span>  
+                    </div>
+                    
+                    <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12" style="text-align: right;">
+                        <strong>PRESUPUESTO PROVEEDOR: </strong><span>{{ presupuesto['sub_proveedor']}}</span>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-end">
+                        <strong>FECHA FIN: </strong><span>{{ presupuesto['fecha_fin']}}</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+                        <strong>DIRECTOR DE OBRA: </strong> {{ presupuesto['director_obra']}}
+                    </div>
+                    <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12" style="text-align: right;">
+                        <strong>DEFERENCIA: </strong><span>{{ presupuesto['sub_diferencia']}}</span>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 text-end">
+                        <strong>TOTAL SEMANAS: </strong><span>{{ presupuesto['total_semanas']}}</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="card" style="display: none;">
         <div class="card-body">
             <input type="hidden" id="status_contratos" name="status_contratos" value="{{ presupuesto['estatus_contratos'] }}">
             <input type="hidden" id="status_presupuesto" name="status_presupuesto"   value="{{ presupuesto['estatus_presupuesto'] }}">
@@ -562,7 +605,7 @@
                             <td colspan="3" class="text-end"><strong>TOTAL:</strong></td>
                             <td><input type="text" id="totalCliente" name="totalCliente" class="form-control currency-input" value="{{presupuesto['total_cliente_iva']}}"
                                     placeholder="$0.00" readonly></td>
-                            <td><input type="text" id="totalContratista"  name="totalContratista" value="{{ presupuesto['sub_proveedor']}}"  class="form-control  currency-input"
+                            <td><input type="text" id="totalContratista"  name="totalContratista" value="{{ presupuesto['total_proveedor']}}"  class="form-control  currency-input"
                                     placeholder="$0.00" readonly></td>
                             <td><input type="text" id="totalDiferencia" name="totalDiferencia" value="{{presupuesto['total_diferencia']}}" class="form-control  currency-input"
                                     placeholder="$0.00" readonly></td>
