--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -117,7 +117,7 @@
                             <a href="/Presupuestos"><i class="bi bi-file-earmark-bar-graph"></i> Presupuestos</a>
                         </li>
                         <li>
-                            <a href="#"><i class="bi bi-currency-dollar"></i> Pagos Sugeridos</a>
+                            <a href="/pagos_sugeridos"><i class="bi bi-currency-dollar"></i> Pagos Sugeridos</a>
                         </li>
                         <li>
                             <a href="#"><i class="bi bi-cash-coin"></i> Aplicación de pagos</a>
